--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "firebase": "^11.5.0",
     "fracta_fintech": "file:",
     "framer-motion": "^12.4.7",
+    "install": "^0.13.0",
+    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0"
@@ -32,5 +34,8 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
